# kui-desktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: EmbedResources.cmake  EmbedResourcesScript.cmake  EmbedSingleFile.cmake  EmbedSingleFileScript.cmake
demo/src/: main.c
include/kui/: filesystem.h  kui.h  resource.h
kui/include/kui/: api.h  kui.h  resource.h
kui/js/: prelude.js
kui/runtime/html/: getting_started.html
kui/runtime/js/: prelude.js
kui/src/: filesystem.c  filesystem.h  kui.c  kui.h  resource.c
runtime/css/: getting_started.css
runtime/html/: getting_started.html
runtime/js/: getting_started.js
src/: main.c
